# EcTest

./: .gitignore  CMakeLists.txt  EcTest.kdev4  cmake.sh  config.sh.in  eni_1ELMO_PTP1.xml  eni_1ELMO_PosVelTorque1.xml  main.cpp  preparations.sh  startDemo.sh
.kdev4/: EcTest.kdev4
buildCopy/: Makefile  cmake_install.cmake  dcmlog0.0.csv  dcmlog0.1.csv  dcmlog0.2.csv  ectest  eni_1ELMO.xml
